--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Icoder</a>
+          <a class="navbar-brand" href="/Icoderbootstrap/">Icoder</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,10 +34,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="/icoderbootstrap/">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="/about.html">about</a>
+                <a class="nav-link" href="/icoderbootstrap/about.html">about</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -60,7 +60,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link active" href="/contact.html">Contact us</a>
+                  <a class="nav-link active" href="/icoderbootstrap/contact.html">Contact us</a>
                 </li>
               
             </ul>
