--- a/about.html
+++ b/about.html
@@ -33,37 +33,37 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link active" href="/about.html">about</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Topics
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Tech</a></li>
-                <li><a class="dropdown-item" href="#">Innovate</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Skills</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact us</a>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/icoderbootstrap/">Home</a>
               </li>
-            
-          </ul>
+              <li class="nav-item ">
+                <a class="nav-link" href="/icoderbootstrap/about.html">about</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Topics
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Tech</a></li>
+                  <li><a class="dropdown-item" href="#">Innovate</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Skills</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="/icoderbootstrap/contact.html">Contact us</a>
+                </li>
+              
+            </ul>
           <form class="d-flex">
             <input
               class="form-control me-2"
