--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/icoderbootstrap/">Home</a>
+                <a class="nav-link" aria-current="page" href="/tut-website/">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="/icoderbootstrap/about.html">about</a>
+                <a class="nav-link" href="/tut-website/about.html">about</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -60,7 +60,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                  <a class="nav-link active" href="/icoderbootstrap/contact.html">Contact us</a>
+                  <a class="nav-link active" href="/tut-website/contact.html">Contact us</a>
                 </li>
               
             </ul>
